tests/ui/associated-type-bounds/return-type-notation/unpretty-parenthesized.stderr
error[E0658]: associated type bounds are unstable
  --> $DIR/unpretty-parenthesized.rs:8:17
   |
LL | fn foo<T: Trait<method(i32): Send>>() {}
   |                 ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #52662 <https://github.com/rust-lang/rust/issues/52662> for more information
   = help: add `#![feature(associated_type_bounds)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
